mcp as separate project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,12 @@
             "projectPath": "${workspaceFolder}/BankApi.Orchestration/BankApi.Orchestration.csproj"
         },
         {
+            "name": "MCP Server",
+            "type": "dotnet",
+            "request": "launch",
+            "projectPath": "${workspaceFolder}/BankApi.Mcp/BankApi.Mcp.csproj"
+        },
+        {
             "name": "API - Stable release channel",
             "type": "dotnet",
             "request": "launch",
