--- a/BankApi.Mcp/BankApi.Mcp.csproj
+++ b/BankApi.Mcp/BankApi.Mcp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="QuickMCP" Version="*" />
+    <PackageReference Include="MCPify" Version="0.0.5-preview" />
   </ItemGroup>
 
   <ItemGroup>
