--- a/BankApi.Mcp/Properties/launchSettings.json
+++ b/BankApi.Mcp/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5200",
-      "launchUrl": "mcp/v1",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
