explicit 3.0 and 3.1 openapi spec versions

--- a/BankApi.Service.Beta/BankApi.Service.Beta.csproj
+++ b/BankApi.Service.Beta/BankApi.Service.Beta.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
     <OpenApiDocumentsDirectory>../Specs.Generated</OpenApiDocumentsDirectory>
-    <OpenApiGenerateDocumentsOptions>--file-name openapi</OpenApiGenerateDocumentsOptions>
+    <OpenApiGenerateDocumentsOptions>--file-name openapi --openapi-version OpenApi3_1</OpenApiGenerateDocumentsOptions>
   </PropertyGroup>
 
   <ItemGroup>
