--- a/.github/workflows/main_bankapi-001.yml
+++ b/.github/workflows/main_bankapi-001.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   PROJECT_NAME: BankApi.Service.Stable
+  APP_NAME: bankapi-001
 
 jobs:
   build:
@@ -59,10 +60,21 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_878C3EB021014E2EA7909DDF503EB8D4 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'bankapi-001'
+          app-name: ${{ env.APP_NAME }}
           slot-name: 'Production'
           package: .
           
+      - name: Set Web App settings
+        uses: azure/appservice-settings@v1
+        with:
+          app-name: ${{ env.APP_NAME }}
+          app-settings-json: |
+            [
+                {
+                    "name": "ASPNETCORE_ENVIRONMENT",
+                    "value": "Development",
+                    "slotSetting": false
+                }
+            ]
