--- a/BankApi.Service.Stable/appsettings.json
+++ b/BankApi.Service.Stable/appsettings.json
@@ -49,7 +49,7 @@
   "ApiDocument": {
     "Servers": [
       {
-        "Url": "https://bankapi-001-ffamb7fcbkcgdsg7.scm.westeurope-01.azurewebsites.net/v1"
+        "Url": "https://bankapi-001-ffamb7fcbkcgdsg7.westeurope-01.azurewebsites.net/v1"
       }
     ],
     "Info": {
