deploy mcp workflow

--- a/.github/workflows/main_bankapi-001.yml
+++ b/.github/workflows/main_bankapi-001.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '10.x'
+          dotnet-version: "10.x"
 
       - name: Build with dotnet
         run: dotnet build ${{env.PROJECT_NAME}} --configuration Release
@@ -51,7 +51,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -71,12 +71,10 @@ jobs:
                     "slotSetting": false
                 }
             ]
-                
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ env.APP_NAME }}
-          slot-name: 'Production'
+          slot-name: "Production"
           package: .
-          
-      
