--- a/.github/workflows/main_bankapi-mcp-001.yml
+++ b/.github/workflows/main_bankapi-mcp-001.yml
@@ -9,6 +9,10 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  PROJECT_NAME: BankApi.Mcp
+  APP_NAME: bankapi-mcp-001
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,13 +25,13 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '10.x'
+          dotnet-version: "10.x"
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ${{env.PROJECT_NAME}} --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ${{env.PROJECT_NAME}} -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -47,7 +51,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -59,7 +63,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'bankapi-mcp-001'
-          slot-name: 'Production'
+          app-name: ${{ env.APP_NAME }}
+          slot-name: "Production"
           package: .
-          
