`.well-known/oauth-protected-resource` as default launch url for mcp

--- a/BankApi.Mcp/Properties/launchSettings.json
+++ b/BankApi.Mcp/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5200",
-      "launchUrl": "",
+      "launchUrl": ".well-known/oauth-protected-resource",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
