OTel  updates and improved parameterization

--- a/.github/workflows/main_bankapi-001.yml
+++ b/.github/workflows/main_bankapi-001.yml
@@ -67,7 +67,7 @@ jobs:
             [
                 {
                     "name": "ASPNETCORE_ENVIRONMENT",
-                    "value": "Development",
+                    "value": "Staging",
                     "slotSetting": false
                 }
             ]
