--- a/BankApi.Service.Stable/appsettings.json
+++ b/BankApi.Service.Stable/appsettings.json
@@ -49,7 +49,7 @@
   "ApiDocument": {
     "Servers": [
       {
-        "Url": "https://bankapi-001-ffamb7fcbkcgdsg7.westeurope-01.azurewebsites.net/v1"
+        "Url": "https://localhost:5201/v1"
       }
     ],
     "Info": {
@@ -75,5 +75,7 @@
   },
   "ConnectionStrings": {
     "BankStorage": "https://sabankapiprd001.blob.core.windows.net/"
-  }
+  },
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+  "OTEL_SERVICE_NAME": "Bank API - Stable"
 }
