--- a/BankApi.Service.Beta/appsettings.Development.json
+++ b/BankApi.Service.Beta/appsettings.Development.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
-  "OTEL_SERVICE_NAME": "Bank API - Beta"
+  "ApiDocument": {
+    "Servers": [
+      {
+        "Url": "https://localhost:5202/v2"
+      }
+    ]
+  }
 }
