--- a/BankApi.Service.Beta/appsettings.json
+++ b/BankApi.Service.Beta/appsettings.json
@@ -75,5 +75,7 @@
   },
   "ConnectionStrings": {
     "BankStorage": "https://sabankapiprd001.blob.core.windows.net/"
-  }
+  },
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+  "OTEL_SERVICE_NAME": "Bank API - Beta"
 }
