--- a/Infra.Generated/aspire-manifest.json
+++ b/Infra.Generated/aspire-manifest.json
@@ -18,7 +18,8 @@
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
         "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
         "HTTP_PORTS": "{BankApiService-Stable.bindings.http.targetPort}",
-        "ConnectionStrings__BankStorage": "{BankStorage.connectionString}"
+        "ConnectionStrings__BankStorage": "{BankStorage.connectionString}",
+        "BANKSTORAGE_URI": "{storage.outputs.blobEndpoint}"
       },
       "bindings": {
         "http": {
@@ -42,7 +43,31 @@
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
         "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
         "HTTP_PORTS": "{BankApiService-Beta.bindings.http.targetPort}",
-        "ConnectionStrings__BankStorage": "{BankStorage.connectionString}"
+        "ConnectionStrings__BankStorage": "{BankStorage.connectionString}",
+        "BANKSTORAGE_URI": "{storage.outputs.blobEndpoint}"
+      },
+      "bindings": {
+        "http": {
+          "scheme": "http",
+          "protocol": "tcp",
+          "transport": "http"
+        },
+        "https": {
+          "scheme": "https",
+          "protocol": "tcp",
+          "transport": "http"
+        }
+      }
+    },
+    "BankApi-Mcp": {
+      "type": "project.v0",
+      "path": "../BankApi.Mcp/BankApi.Mcp.csproj",
+      "env": {
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
+        "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
+        "HTTP_PORTS": "{BankApi-Mcp.bindings.http.targetPort}"
       },
       "bindings": {
         "http": {
