--- a/BankApi.Mcp/BankApi.Mcp.csproj
+++ b/BankApi.Mcp/BankApi.Mcp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MCPify" Version="0.0.12" />
+    <PackageReference Include="MCPify" Version="0.0.13-preview" />
   </ItemGroup>
 
   <ItemGroup>
