--- a/BankApi.Mcp/BankApi.Mcp.csproj
+++ b/BankApi.Mcp/BankApi.Mcp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.*" />
     <PackageReference Include="MCPify" Version="0.0.13-preview" />
   </ItemGroup>
 
