--- a/BankApi.Mcp/appsettings.Development.json
+++ b/BankApi.Mcp/appsettings.Development.json
@@ -1,4 +1,4 @@
 {
-  "ApiBaseUrl": "http://localhost:5201",
+  "ApiBaseUrl": "https://bankapi-001-ffamb7fcbkcgdsg7.westeurope-01.azurewebsites.net",
   "McpServerBaseUrl": "http://localhost:5200"
 }
